--- a/html/bootstrap_badge.html
+++ b/html/bootstrap_badge.html
@@ -141,7 +141,13 @@
                     <div class="container_text">
                         <div class="w-title">
                             <div class="container">
-                                <h1>Bootstrap 5 Сетки</h1>
+
+                                <div class="w-title">
+                                    <div class="container">
+                                        <h1>Значки в Bootstrap 5</h1>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                         <div class="column is-9-desktop is-12-tablet is-12-mobile w-content">
@@ -167,7 +173,98 @@
                             </div>
 
                             <section id="w-main">
-                                <h3>Система сеток Bootstrap 5</h3>
+
+                                <img src="../img/15.webp" alt="15" class="pictures">
+
+                                <p>Классы значков Bootstrap можно использовать для выделения дополнительной информации,
+                                    добавляемой к текстовой строке.
+                                </p>
+                                <p>Чтобы создать значок, примените класс <span class="class">.badge</span>, а также один
+                                    из контекстных классов <span class="class">.bg-*</span> к элементу <a
+                                        href="/html/span">&lt;span&gt;</a>, представляющему значок.</p>
+                                <p>Здесь мы создаём значок по умолчанию, используя <span class="var">class="badge
+                                        badge-primary"</span>.</p>
+
+                                <div class="w3-example">
+                                    <h3> Пример</h3>
+                                    <div class="w3-code notranslate htmlHigh">
+                                        <pre>
+
+&lt;h3&gt;Смотрите, вот это значок… &lt;span <span>class="badge bg-primary"</span>&gt;Новое&lt;/span&gt;&lt;/h3&gt;
+</pre>
+                                        <h3>Смотрите, вот это значок… <span class="badge bg-primary">Новое</span></h3>
+                                    </div>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
+                                </div>
+                                <hr>
+
+                                <h2>Контекстные классы</h2>
+
+                                <p>Для значков доступны следующие контекстные классы.</p>
+
+                                <div class="w3-example">
+                                    <h3> Пример</h3>
+                                    <div class="w3-code notranslate htmlHigh">
+                                        <pre>
+&lt;span class="badge bg-primary"&gt;Основной&lt;/span&gt;
+&lt;span class="badge bg-success"&gt;Успех&lt;&lt;span&gt;
+&lt;span class="badge bg-info"&gt;Инфо&lt;/span&gt;
+&lt;span class="badge bg-warning"&gt;Предупреждение&lt;/span&gt;
+&lt;span class="badge bg-danger"&gt;Опасность&lt;/span&gt;
+&lt;span class="badge bg-light"&gt;Светлый&lt;/span&gt;
+&lt;span class="badge bg-dark"&gt;Тёмный&lt;/span&gt;
+</pre>
+                                        <div class="v1">
+                                            <span class="badge bg-primary">Основной</span>
+                                            <span class="badge bg-success">Успех</span>
+                                            <span class="badge bg-info">Инфо</span>
+                                            <span class="badge bg-warning">Предупреждение</span>
+                                            <span class="badge bg-danger">Опасность</span>
+                                            <span class="badge bg-light vv2">Светлый</span>
+                                            <span class="badge bg-dark">Тёмный</span>
+                                        </div>
+
+                                    </div>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
+                                </div>
+                                <hr>
+
+                                <h2>Значки в виде таблетки</h2>
+
+                                <p>Сделайте углы более закругленными с помощью класса <span class="class">badge
+                                        rounded-pil</span>.</p>
+
+                                <div class="w3-example">
+                                    <h3> Пример</h3>
+                                    <div class="w3-code notranslate htmlHigh">
+                                        <pre>
+&lt;span class="<span>badge rounded-pill</span> bg-primary"&gt;Основной&lt;/span&gt;
+&lt;span class="<span>badge rounded-pill</span> bg-success"&gt;Успех&lt;/span&gt;
+&lt;span class="<span>badge rounded-pill</span> bg-info"&gt;Инфо&lt;/span&gt;
+&lt;span class="<span>badge rounded-pill</span> bg-warning"&gt;Предупреждение&lt;/span&gt;
+&lt;span class="<span>badge rounded-pill</span> bg-danger"&gt;Опасность&lt;/span&gt;
+&lt;span class="<span>badge rounded-pill</span> bg-light"&gt;Светлый&lt;/span&gt;
+&lt;span class="<span>badge rounded-pill</span> bg-dark"&gt;Тёмный&lt;/span&gt;
+</pre>
+                                        <div class="v1">
+                                            <span class="badge rounded-pill bg-primary">Основной</span>
+                                            <span class="badge rounded-pill bg-success">Успех</span>
+                                            <span class="badge rounded-pill bg-info">Инфо</span>
+                                            <span class="badge rounded-pill bg-warning">Предупреждение</span>
+                                            <span class="badge rounded-pill bg-danger">Опасность</span>
+                                            <span class="badge rounded-pill bg-light vv2">Светлый</span>
+                                            <span class="badge rounded-pill bg-dark">Тёмный</span>
+                                        </div>
+
+
+                                        <i><span style="color:#e7e9eb;">end.</span></i>
+                                    </div>
+
+
+
+
+
+
 
 
                             </section>
